--- a/functions/function/payload-converter-function/pom.xml
+++ b/functions/function/payload-converter-function/pom.xml
@@ -4,14 +4,14 @@
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>payload-converter-function</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0-M2</version>
 	<name>payload-converter-function</name>
 	<description>Utility message conversion functions</description>
 
 	<parent>
 		<groupId>org.springframework.cloud.fn</groupId>
 		<artifactId>spring-functions-parent</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>1.0.0-M2</version>
 		<relativePath>../../spring-functions-parent</relativePath>
 	</parent>
 
