--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -48,19 +48,15 @@ jobs:
     if: ${{ inputs.enableSecurityScan && github.repository == 'spring-cloud/stream-applications' }}
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: Run Trivy vulnerability scanner in repo mode
         uses: aquasecurity/trivy-action@master
         with:
           scan-type: 'fs'
           ignore-unfixed: true
-          format: 'sarif'
-          output: 'trivy-results.sarif'
           severity: 'CRITICAL,HIGH'
-      - name: Upload Trivy scan results to GitHub Security tab
-        uses: github/codeql-action/upload-sarif@v2
-        with:
-          sarif_file: 'trivy-results.sarif'
+          exit-code: 1
+          trivyignores: .trivyignore
       - name: 'Scanned'
         shell: bash
         run: echo "::info ::Scanned"
@@ -255,7 +251,7 @@ jobs:
           fail-on-empty: false
       - name: 'Upload: Test Reports'
         if: ${{ always() }}
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: 'core-surefire-reports'
           path: 'stream-applications/**/target/surefire-reports'
@@ -373,7 +369,7 @@ jobs:
           fail-on-empty: false
       - name: 'Upload: Test Reports'
         if: ${{ always() }}
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: '${{ matrix.app }}-surefire-reports'
           path: '**/target/surefire-reports'
@@ -471,7 +467,7 @@ jobs:
         run: ./build-app.sh . "applications/sink/${{ matrix.app }}"
       - name: 'Upload: Test Reports'
         if: ${{ always() }}
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: '${{ matrix.app }}-surefire-reports'
           path: '**/target/surefire-reports'
@@ -610,7 +606,7 @@ jobs:
           fail-on-empty: false
       - name: 'Upload: Test Reports'
         if: ${{ always() }}
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: '${{ matrix.app }}-surefire-reports'
           path: '**/target/surefire-reports'
@@ -764,7 +760,7 @@ jobs:
           fail-on-empty: false
       - name: 'Upload: Test Reports'
         if: ${{ always() }}
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: '${{ matrix.app }}-surefire-reports'
           path: '**/target/surefire-reports'
