--- a/applications/stream-applications-core/pom.xml
+++ b/applications/stream-applications-core/pom.xml
@@ -35,6 +35,9 @@
         <!-- Override for CVE-2025-59250 -->
         <mssql-jdbc.version>12.8.2.jre11</mssql-jdbc.version>
 
+        <!-- Override for CVE-2025-12183 -->
+        <lz4-java.version>1.8.1</lz4-java.version>
+
     </properties>
 
     <modules>
@@ -63,6 +66,11 @@
                 <groupId>com.microsoft.sqlserver</groupId>
                 <artifactId>mssql-jdbc</artifactId>
                 <version>${mssql-jdbc.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.lz4</groupId>
+                <artifactId>lz4-java</artifactId>
+                <version>${lz4-java.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -177,6 +185,11 @@
                                             <groupId>com.microsoft.sqlserver</groupId>
                                             <artifactId>mssql-jdbc</artifactId>
                                             <version>${mssql-jdbc.version}</version>
+                                        </dependency>
+                                        <dependency>
+                                            <groupId>org.lz4</groupId>
+                                            <artifactId>lz4-java</artifactId>
+                                            <version>${lz4-java.version}</version>
                                         </dependency>
                                     </dependencyManagement>
                                     <dependencies>
