Fix CVEs for mssql-jdbc and lz4-java
Removes the previous override of `mssql-jdbc` which is no longer
required as Spring Boot `3.4.13` dependency management updates the
version to the fixed version `12.8.2.jre11`.

Moves the previous override of `lz4-java` to where the dependency
is used - in the Kafka binder apps only. Also update from version
`1.8.1` to `1.10.3` as there are more recent CVEs since last update.

Finally, adds CVE-2025-59250 to the trivyignore list because Trivy
is incorrectly reporting that we are using version `12.8.2` when
we are actually using the fixed version `12.8.2.jre11`.

Signed-off-by: Chris Bono <chris.bono@broadcom.com>

--- a/.trivyignore
+++ b/.trivyignore
@@ -6,12 +6,21 @@ CVE-2023-32731
 
 ################################
 # Snakeyaml 1.3.3
-# SCDF usage has been mitigated.
+# Usage has been mitigated.
 ################################
 CVE-2022-1471
 
 ################################
 # Spring Web 5.3.x
-# SCDF not affected.
+# Not affected.
 ################################
 CVE-2016-1000027
+
+################################
+# SqlServer Jdbc Driver
+# Using 12.8.2.jre11 but Trivy
+# does not recognize the jre11
+# suffix and still reports the
+# CVE.
+################################
+CVE-2025-59250
