Fix CVEs for mssql-jdbc and lz4-java
Removes the previous override of `mssql-jdbc` which is no longer
required as Spring Boot `3.4.13` dependency management updates the
version to the fixed version `12.8.2.jre11`.

Also adds CVE-2025-59250 to the trivyignore list because Trivy
is incorrectly reporting that we are using version `12.8.2` when
we are actually using the fixed version `12.8.2.jre11`.

Moves the previous override of `lz4-java` to where the dependency
is used - in the Kafka binder apps only. Also update from version
`1.8.1` to `1.10.3` as there are more recent CVEs since last update.

Fixes CVE-2024-29371 by updating `org.bitbucket.b_c:jose4j` to `0.9.6`.

Fixes CVE-2026-24400 by updating AssertJ to `3.27.7`.

Signed-off-by: Chris Bono <chris.bono@broadcom.com>

--- a/applications/sink/kafka-sink/pom.xml
+++ b/applications/sink/kafka-sink/pom.xml
@@ -20,12 +20,31 @@
 		<dependency>
 			<groupId>org.springframework.cloud.fn</groupId>
 			<artifactId>spring-kafka-publisher</artifactId>
+			<!-- Exclude lz4-java due to CVE-2025-12183 / CVE-2025-66566 -->
+			<exclusions>
+				<exclusion>
+					<groupId>org.lz4</groupId>
+					<artifactId>lz4-java</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>at.yawk.lz4</groupId>
+			<artifactId>lz4-java</artifactId>
+			<version>${lz4-java.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.kafka</groupId>
 			<artifactId>spring-kafka-test</artifactId>
 			<scope>test</scope>
+			<!-- Exclude lz4-java due to CVE-2025-12183 / CVE-2025-66566 -->
+			<exclusions>
+				<exclusion>
+					<groupId>org.lz4</groupId>
+					<artifactId>lz4-java</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 	</dependencies>
 
@@ -59,6 +78,18 @@
 								<dependency>
 									<groupId>org.springframework.cloud.fn</groupId>
 									<artifactId>spring-kafka-publisher</artifactId>
+									<!-- Exclude lz4-java due to CVE-2025-12183 / CVE-2025-66566 -->
+									<exclusions>
+										<exclusion>
+											<groupId>org.lz4</groupId>
+											<artifactId>lz4-java</artifactId>
+										</exclusion>
+									</exclusions>
+								</dependency>
+								<dependency>
+									<groupId>at.yawk.lz4</groupId>
+									<artifactId>lz4-java</artifactId>
+									<version>${lz4-java.version}</version>
 								</dependency>
 							</dependencies>
 						</maven>
